package grpcsrv

import (
	"context"

	pb "github.com/ccjshop/go-mall/proto/mall"
)

func (s PortalApiImpl) CouponAdd(ctx context.Context, req *pb.CouponAddReq) (*pb.CouponAddRsp, error) {
	//TODO implement me
	panic("implement me")
}

func (s PortalApiImpl) CouponListHistory(ctx context.Context, req *pb.CouponListHistoryReq) (*pb.CouponListHistoryRsp, error) {
	//TODO implement me
	panic("implement me")
}

func (s PortalApiImpl) CouponList(ctx context.Context, req *pb.CouponListReq) (*pb.CouponListRsp, error) {
	//TODO implement me
	panic("implement me")
}

func (s PortalApiImpl) CouponListCart(ctx context.Context, req *pb.CouponListCartReq) (*pb.CouponListCartRsp, error) {
	//TODO implement me
	panic("implement me")
}

func (s PortalApiImpl) CouponListByProduct(ctx context.Context, req *pb.CouponListByProductReq) (*pb.CouponListByProductRsp, error) {
	//TODO implement me
	panic("implement me")
}
